--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.belatrix.pickmeup" >
+    package="com.belatrix.pickmeup">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".EmptyActivity" >
+        android:theme="@style/AppTheme">
+        <activity android:name=".EmptyActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,8 +17,8 @@
         </activity>
         <activity
             android:name=".AddRoute"
-            android:label="@string/title_activity_add_route" >
-        </activity>
+            android:label="@string/title_activity_add_route"></activity>
+        <activity android:name=".activity.MenuActivity"></activity>
     </application>
 
 </manifest>
