--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EmptyActivity">
+        <activity android:name=".activity.EmptyActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -16,7 +16,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".AddRoute"
+            android:name=".activity.AddRouteActivity"
             android:label="@string/title_activity_add_route"></activity>
         <activity android:name=".activity.MenuActivity"></activity>
     </application>
