--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".HomeActivity"
+            android:name=".activity.HomeActivity"
             android:label="@string/title_activity_home"
             android:theme="@style/AppTheme.NoActionBar">
             android:name=".AddRoute"
@@ -25,7 +25,7 @@
             android:name=".activity.AddRouteActivity"
             android:label="@string/title_activity_add_route">
         <activity android:name=".activity.MenuActivity">
-            
+
         </activity>
     </application>
 
