--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             android:name=".activity.HomeActivity"
             android:label="@string/title_activity_home"></activity>
         <activity
-            android:name="activity.AddRouteActivity"
+            android:name=".activity.AddRouteActivity"
             android:label="@string/title_activity_add_route"></activity>
         <activity
             android:name=".activity.MenuActivity"
