--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.belatrix.pickmeup">
+          package="com.belatrix.pickmeup">
 
     <application
         android:allowBackup="true"
@@ -10,20 +10,20 @@
         android:theme="@style/AppTheme">
         <activity android:name=".activity.EmptyActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
             android:name=".activity.HomeActivity"
-            android:label="@string/title_activity_home"></activity>
+            android:label="@string/title_activity_home"/>
         <activity
             android:name=".activity.AddRouteActivity"
-            android:label="@string/title_activity_add_route"></activity>
+            android:label="@string/title_activity_add_route"/>
         <activity
             android:name=".activity.MenuActivity"
-            android:label="@string/title_activity_home"></activity>
+            android:label="@string/title_activity_home"/>
         <activity
             android:name=".activity.LoginActivity"
             android:label="@string/title_activity_login"
