--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <!-- @style/AppTheme.NoActionBar es añadido para que el activity no añada el toolbar por default-->
+        <!-- el toolbar de HomeActivity se manejará en la misma activity-->
         <activity
             android:name=".activity.HomeActivity"
             android:label="@string/title_activity_home"
