--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,10 @@
 language: android
 android:
   components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
-    # - platform-tools
-    # - tools
 
-    # The BuildTools version used by your project
+    - platform-tools
+    - tools
     - build-tools-23.0.3
-
-    # The SDK version used to compile your project
     - android-23
 
     # Additional components
