--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,14 @@
 language: android
+
+sudo: false
+cache:
+  directories:
+    - $HOME/.gradle/caches/2.13
+    - $HOME/.gradle/caches/jars-1
+    - $HOME/.gradle/daemon
+    - $HOME/.gradle/native
+    - $HOME/.gradle/wrapper
+
 android:
   components:
 
@@ -18,3 +28,6 @@ android:
     # if you need to run emulator(s) during your tests
     - sys-img-armeabi-v7a-android-23
     - sys-img-x86-android-23
+
+script:
+      - ./gradlew assembleDebug -PdisablePreDex
