rename app name to pickmeup add keystore file

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,4 +34,6 @@ android:
     - sys-img-x86-android-23
 
 script:
-      - ./gradlew assembleDebug -PdisablePreDex
+      - ./gradlew assembleQa -PdisablePreDex
+
+
