--- a/pickmeup/build.gradle
+++ b/pickmeup/build.gradle
@@ -1,9 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
+
+    final DEBUG_PACKAGE_SUFFIX = ".debug"
+    final QA_PACKAGE_SUFFIX = ".qa"
+
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
-
     defaultConfig {
         applicationId "com.belatrix.pickmeup"
         minSdkVersion 15
@@ -12,13 +15,32 @@ android {
         versionName "1.0"
         vectorDrawables.useSupportLibrary = true
     }
+
+    signingConfigs {
+        qa {
+            keyAlias 'PickMeUp-qa'
+            keyPassword 'pickmeupqa'
+            storeFile file('keystores/keystore.jks')
+            storePassword 'pickmeup'
+        }
+    }
+
     buildTypes {
+
+        qa {
+            debuggable true
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            applicationIdSuffix QA_PACKAGE_SUFFIX
+            versionNameSuffix ' QA'
+            signingConfig signingConfigs.qa
+
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
     lintOptions {
         abortOnError false
     }
