fix keystore path in travis

--- a/pickmeup/build.gradle
+++ b/pickmeup/build.gradle
@@ -18,10 +18,10 @@ android {
 
     signingConfigs {
         qa {
-            keyAlias 'PickMeUp-qa'
-            keyPassword 'pickmeupqa'
             storeFile file('keystores/keystore.jks')
             storePassword 'pickmeup'
+            keyAlias 'pickmeup-qa'
+            keyPassword 'pickmeupqa'
         }
     }
 
