--- a/.travis.yml
+++ b/.travis.yml
@@ -32,4 +32,13 @@ deploy:
   app-file: pickmeup/build/outputs/apk/pickmeup-qa.apk
   keystore-file: pickmeup/keystores/keystore.jks
   storepass: pickmeup
-  alias: PickMeUp-qa
+  alias: pickmeup-qa
+  testers-groups: pickmeup
+  auto-update: true
+  screenshot-interval: 2
+  video: true
+  video-quality: medium
+  icon-watermark: true
+  data-only-wifi: true
+  metrics: cpu,memory,network,phone-signal,logcat
+  advanced-options: shake
