--- a/pickmeup/src/main/AndroidManifest.xml
+++ b/pickmeup/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.EmptyActivity">
+        <activity android:name=".activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,10 +27,6 @@
         <activity
             android:name=".activity.AddRouteActivity"
             android:label="@string/title_activity_add_route" />
-        <activity
-            android:name=".activity.LoginActivity"
-            android:label="@string/title_activity_login"
-            android:theme="@style/AppTheme.LoginTheme" />
         <activity
             android:name=".activity.SignUpActivity"
             android:label="@string/title_activity_signup"
