--- a/pickmeup/src/main/AndroidManifest.xml
+++ b/pickmeup/src/main/AndroidManifest.xml
@@ -25,15 +25,12 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".activity.AddRouteActivity"
+            android:name=".activity.RouteActivity"
             android:label="@string/title_activity_add_route" />
         <activity
             android:name=".activity.SignUpActivity"
             android:label="@string/title_activity_signup"
             android:theme="@style/AppTheme.LoginTheme" />
-        <activity
-            android:name=".activity.DetailPageActivity"
-            android:label="@string/app_name" />
         <activity
             android:name=".activity.ForgotPasswordActivity"
             android:label="@string/forgot_password"
