--- a/pickmeup/build.gradle
+++ b/pickmeup/build.gradle
@@ -59,12 +59,12 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.2.0'
-    compile 'com.android.support:cardview-v7:23.2.0'
-    compile 'com.android.support:design:23.2.0'
+    compile "com.android.support:appcompat-v7:$android_support_ver"
+    compile "com.android.support:cardview-v7:$android_support_ver"
+    compile "com.android.support:design:$android_support_ver"
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.android.support:recyclerview-v7:23.2.0'
-    compile 'com.android.support:support-v4:23.2.0'
+    compile "com.android.support:recyclerview-v7:$android_support_ver"
+    compile "com.android.support:support-v4:$android_support_ver"
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
