Contact details: calling firebase API

--- a/pickmeup/src/main/AndroidManifest.xml
+++ b/pickmeup/src/main/AndroidManifest.xml
@@ -39,6 +39,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.LoginActivity" />
         </activity>
+        <activity
+            android:name=".activity.ContactDetailsActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
