--- a/pickmeup/build.gradle
+++ b/pickmeup/build.gradle
@@ -68,4 +68,8 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.google.firebase:firebase-auth:9.6.1'
+
 }
+apply plugin: 'com.google.gms.google-services'
+
