--- a/pickmeup/build.gradle
+++ b/pickmeup/build.gradle
@@ -64,7 +64,9 @@ dependencies {
     compile "com.android.support:design:$android_support_ver"
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile "com.android.support:recyclerview-v7:$android_support_ver"
-    compile "com.android.support:support-v4:$android_support_ver"
+    compile ('com.android.support:support-v4:23.4.0'){
+        force = true;
+    }
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
