--- a/pickmeup/src/main/AndroidManifest.xml
+++ b/pickmeup/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.belatrix.pickmeup">
+          package="com.belatrix.pickmeup">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -12,9 +12,9 @@
         android:theme="@style/AppTheme">
         <activity android:name=".activity.LoginActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
@@ -23,24 +23,29 @@
         <activity
             android:name=".activity.HomeActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".activity.RouteActivity"
-            android:label="@string/title_activity_add_route" />
+            android:screenOrientation="portrait"
+            android:label="@string/title_activity_add_route"/>
         <activity
             android:name=".activity.SignUpActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_signup"
-            android:theme="@style/AppTheme.LoginTheme" />
+            android:theme="@style/AppTheme.LoginTheme"/>
         <activity
             android:name=".activity.ForgotPasswordActivity"
             android:label="@string/forgot_password"
+            android:screenOrientation="portrait"
             android:parentActivityName=".activity.LoginActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activity.LoginActivity" />
+                android:value=".activity.LoginActivity"/>
         </activity>
         <activity
             android:name=".activity.ContactDetailsActivity"
+            android:screenOrientation="portrait"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
