--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ android:
   - sys-img-armeabi-v7a-android-25
   - sys-img-x86-android-25
 script:
-- ./gradlew assembleDebug
+- ./gradlew testfairyDebug
 
 notifications:
   slack: pickmeup-bsf:NQfFpQo96qClEKvbjvy0lGly
